; ModuleID = '/home/carl/AnghaBench/sway/sway/input/extr_tablet.c_sway_tablet_destroy.c'
source_filename = "/home/carl/AnghaBench/sway/sway/input/extr_tablet.c_sway_tablet_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_tablet = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sway_tablet_destroy(%struct.sway_tablet* %0) #0 {
  %2 = alloca %struct.sway_tablet*, align 8
  store %struct.sway_tablet* %0, %struct.sway_tablet** %2, align 8
  %3 = load %struct.sway_tablet*, %struct.sway_tablet** %2, align 8
  %4 = icmp ne %struct.sway_tablet* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %12

6:                                                ; preds = %1
  %7 = load %struct.sway_tablet*, %struct.sway_tablet** %2, align 8
  %8 = getelementptr inbounds %struct.sway_tablet, %struct.sway_tablet* %7, i32 0, i32 0
  %9 = call i32 @wl_list_remove(i32* %8)
  %10 = load %struct.sway_tablet*, %struct.sway_tablet** %2, align 8
  %11 = call i32 @free(%struct.sway_tablet* %10)
  br label %12

12:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @wl_list_remove(i32*) #1

declare dso_local i32 @free(%struct.sway_tablet*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
